# marginalia

./: .gitignore  README.md  build-app.sh  llm_chat.py  marginalia.py  marginalia.swift  progress.txt  pyproject.toml  reader3.py  server.py
templates/: base.html  library.html  reader.html
thoughts/shared/plans/: 2026-03-18_22-58-45_fix_pdf_zoom_scroll_jump.md
thoughts/shared/research/: 2026-03-18_22-53-30_pdf_zoom_workflow.md
