[project]
name = "reader3"
version = "0.2.0"
description = "Multi-format book reader with LLM chat (EPUB, PDF, DOCX, MOBI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "fastapi>=0.121.2",
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "mobi>=0.3.3",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.38.0",
]
