[project]
name = "reader3"
version = "0.2.0"
description = "Multi-format book reader with LLM chat (EPUB, PDF, DOCX, MOBI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-cohere>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-fireworks>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-mistralai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-together>=0.2.0",
    "langchain-xai>=0.2.0",
    "mobi>=0.3.3",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.38.0",
]
